--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
         <div class="container">
             <div class="sidebar">
 
-                <div class="nav">
+                <nav>
                     <ul>
-                        <li>Home</li>
-                        <li>Summary</li>
-                        <li>Skills</li>
-                        <li>Contacts</li>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Summary</a></li>
+                        <li><a href="#">Skills</a></li>
+                        <li><a href="#">Contacts</a></li>
                     </ul>
-                </div>
+                </nav>
             </div>
             <main class="content">
                 <section class="hero">
