feat: add design skills to section

--- a/index.html
+++ b/index.html
@@ -40,9 +40,8 @@
                     <p><em>Version Control:</em> Git & Github, Bitbucket;</p>
                     <p><em>CMS:</em> <strong>Wordpress</strong>, Woordpress Themes Development, Elementor, Visual Composer, Contact Forms 7, Gutenberg;</p>
                     <p><em>CSS Frameworks and Libraries:</em> Bootstrap, Foundation, Materialize, Animate.css;</p>
+                    <p><em>Design Skills:</em> Web Design, Graphic Design, Photoshop, Figma, AdobeXD;</p>
                 </section>
-
-
             </main>
             <footer class="footer">
                 <ul>
